<resources>
    <string name="app_name">Popular Movies App</string>
    <string name="title"> Title!</string>
    <string name="synopsis">Synopsis!</string>
    <string name="release_date">Release Date!</string>
    <string name="rating">User Rating!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="pref_sortby_label">SortBy</string>
    <string name="pref_sortby_key">sortby</string>
    <string name="pref_sortby_default">Popularity</string>

    <string name="pref_sortby_label_popularity">Popularity</string>
    <string name="pref_sortby_label_highestrated">Highest Rated</string>
    <string name="pref_sortby_label_favorites">Favorites</string>
    <string name="pref_sortby_popularity">Popularity</string>
    <string name="pref_sortby_highestrated">Highest Rated</string>
    <string name="pref_sortby_favorites">Favorites</string>
    <string name="title_activity_detail">DetailActivity</string>


    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="listname">List Name</string>
    <string name="overview">Overview:</string>


</resources>
